--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -4,8 +4,7 @@ on:
     branches: [ master ]
   workflow_dispatch:
 jobs:
-  # This workflow contains a single job called "build"
-  build:
+  publish:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
@@ -19,16 +18,16 @@ jobs:
         with:
           node-version: '10.x'
           
-      - name: Install Dependencies, run build, lint, and tests
-        run: |
+      - name: Publish and Deploy latest code
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+        run:
             npm i
             npm run lint
             npm run test
             npm run build
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-        run: |
-          npm run semantic-release
-          npm run deploy
+            npm run semantic-release
+            npm run publish
+            npm run deploy
             
