--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -11,7 +11,7 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: 10.19
-      - run: npm ci
+      - run: npm i
       - run: npm run test
       - run: npm run lint
       - run: npm run prebuild
@@ -23,9 +23,9 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
-          node-version: 14
+          node-version: 10.19
           registry-url: https://registry.npmjs.org/
-      - run: npm ci
+      - run: npm i
       - run: npm publish
       - run: npx run semantic-release
       - run: npm publish --access public
@@ -41,7 +41,7 @@ jobs:
         with:
           node-version: 10.19
           registry-url: https://registry.npmjs.org/
-      - run: npm ci
+      - run: npm i
       - run: npm run deploy
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
