--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
   "typings": "typings/index.d.ts",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/express-labs/pure-react-carousel.git"
+    "url": "https://github.com/express-labs/pure-react-carousel.git"
   },
   "author": "Matthew Toledo",
   "license": "MIT",
@@ -103,7 +103,7 @@
     "rollup-plugin-uglify": "^6.0.3",
     "rollup-plugin-uglify-es": "0.0.1",
     "rollup-watch": "^4.3.1",
-    "semantic-release": "^15.13.3",
+    "semantic-release": "^18.0.0",
     "uglify-es": "^3.3.5",
     "waait": "^1.0.5",
     "watch": "^1.0.2"
